[package]
name = "more_nums"
version = "0.1.0"
authors = ["Cyborus <scienceguy04@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
no-std-compat = { version = "0.3.0", features = [ "compat_macros" ] }

[features]
std = [ "no-std-compat/std" ]